# aoc2025

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
src/: day1.py  day1_part2.py  day2.py  day2_part2.py  day3.py  day3_part2.py  day4.py  day4_part2.py  day4_part2_variant.py  download_input.py  file_helper.py
src/days/: day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/helpers/: download_input.py  file_helper.py
src/tests/: day1_tests.py  day2_tests.py  test_day1.py  test_day10.py  test_day11.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
